config/tandoor/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  labels:
    app: tandoor
